fixed horizontal scrolling

--- a/source/styles/_base.typography.scss
+++ b/source/styles/_base.typography.scss
@@ -27,6 +27,11 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6,{
 
 }
 
+// adds spacing between headings and paragraphs
+h2:not(:first-of-type) {
+  margin-top: $spacing-xx-large;
+}
+
 a {
   text-decoration: none;
   color: inherit;
